src/gamepanel.scss
.bga-game-panel {
    .bga-page-section > .bga-page-section__title {
        color: $onSurface;
        .text-bga-gamename {
            color: $lightPrimary;
        }
    }

    .bga-page-section__content > .bg-bga-gray-204 {
        background-color: $lightSurface !important;
    }

    .bga-lobby-table-item {
        background: $lightSurface !important;
        &:hover {
            background-color: $lighterSurface !important;
        }

        .bga-lobby-table-item__bg {
            background: $lighterSurface !important;
        }
    }

    .block-panel-rules,
    .block-panel-weblinks,
    .bga-panel-table-status {
        .hover\:bg-bga-gray-211:hover {
            background-color: $lighterSurface !important;
            color: $onSurface !important;
        }
        .bg-bga-gray-233 {
            background-color: $lightSurface !important;
        }
    }

    // Tables list
    .block-panel-gaminfo .bga-table-list-item {
        .bga-table-list-item__background .bga-table-list-item__main.svelte-1yag60g.svelte-1yag60g {
            background-color: $lightSurface !important;
        }
    }

    .bga-panel-table-configuration {
        .bga-game-option-item-choice__selector {
            .text-bga-gray-78 {
                color: $onPrimary !important;
            }
        }
        .bga-game-option-item-bool {
            .text-bga-gray-78 {
                color: $onPrimary !important;
            }
        }
    }

    // Rankings
    .block-panel-rankings {
        .even\:bg-bga-gray-211:nth-child(2n) {
            background-color: $lightSurface !important;
        }
    }

    // Videos
    .block-panel-videos {
        .bg-bga-gray-211 {
            background-color: $lightSurface !important;
        }
    }

    // Background
    &.bga-game-panel--status-tournaments.svelte-1oom2uq .bga-game-panel__content-divider-line.svelte-1oom2uq, &.bga-game-panel--status-quick-play.svelte-1oom2uq .bga-game-panel__content-divider-line.svelte-1oom2uq, &.bga-game-panel--status-arena.svelte-1oom2uq .bga-game-panel__content-divider-line.svelte-1oom2uq {
        border-top-color: $lightSurface;
    }

    &.bga-game-panel--status-tournaments.svelte-1oom2uq .bga-game-panel__content-divider-background.svelte-1oom2uq, &.bga-game-panel--status-quick-play.svelte-1oom2uq .bga-game-panel__content-divider-background.svelte-1oom2uq, &.bga-game-panel--status-arena.svelte-1oom2uq .bga-game-panel__content-divider-background.svelte-1oom2uq {
        background: linear-gradient($surface, $background 300px);
    }
}

.bga-invite-player-modal .bga-invite-player-modal__content {
    background-color: $lightSurface !important;

    .bga-hover-for-list:hover {
        background: $lighterSurface !important;
    }
}

.bga-player-profile-modal__content.svelte-bn746u.svelte-bn746u {
    background-color: $lighterSurface !important;
}

// Main dropdown
#ebd-body > div.bga-dropdown__list-wrap.hidden.bga-dropdown__list-wrap--tablet.svelte-n2kuh.bga-dropdown__list-wrap--sized.bga-modal > div > div.bga-dropdown__options #dropdown-container {
    & > .bg-gray-200 {
        background-color: $lightSurface;

        &:hover {
            background-color: $lighterSurface;
        }
    }
}

// Medias box icons
.bga-game-panel-medias-box__icon{
  background: linear-gradient(90deg, #0000 100%, #0007 100%);
}
.bga-game-panel-medias-box__icon--active{
   background: $surface!important;
   color: $primary;
}
.bga-game-panel-medias-box__icon.bga-link {
   background-color: $lighterSurface!important;
}

// How to play
.howtoplay_block_enabled {
    background: $darkPrimary;
    .howtoplay_content {
        color: $onSurface;
    }
    &:hover {
        background: $primary;
    }
    a span {
        color: white !important;
    }
}

// Challenge
.challenge_text {
    color: $onSurface;
    & b {
        color: $primary;
    }
}
.challenge_image {
    filter: none;
}

// Game characteristics (icons & bars)
.icon16_nbrplayer,
.icon16_duration,
.icon16_luck {
    filter: invert(100%);
}

.icon16_strategy {
    filter: brightness(200%);
}

.game_carac_bar_strategy {
    background-color: blue;
}

.game_carac_bar_luck {
    background-color: white;
}

